# libairs

./: .gitignore  Cargo.toml  readme.md
benchmarks/: generate_benchmark.py
examples/: convert_inputs.rs  match_ancestors.rs  timings.rs
src/: ancestors.rs  convenience.rs  dna.rs  lib.rs  samples.rs
src/ancestors/: ancestor_array.rs  generator.rs  mod.rs
src/ts/: ancestor_array.rs  ancestor_iterator.rs  matcher.rs  mod.rs  partial_sequence.rs  tree_sequence.rs
src/ts/ancestor_index/: iter.rs  mod.rs  sequence.rs  traceback.rs  tree.rs
src/variants/: builder.rs  data.rs  mod.rs  sequence.rs  site.rs
testdata/: chr20_40ancestors.txt  chr20_40variants.txt
tests/: test_grouping.rs  test_incomplete_inner_nodes.rs  test_incomplete_node_start.rs  test_incomplete_nodes.rs  test_markov_ancestor_count.rs  test_markov_ancestor_count2.rs  test_mimic_tsinfer.rs  test_mimic_tsinfer_2.rs  test_mutation_on_recombination.rs  test_regression_unknown.rs  test_unknown.rs  tsinfer_ancestor.rs
tests/common/: mod.rs
testsuite/: draw.py  evaluate_tests.py  generate_tests.py  requirements.txt  run.sh  run_tsinfer_vcf.py
