[package]
name = "libairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
twox-hash = "1.6"
scoped-thread-pool = "1.0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
bincode = "1.3.3"
anyhow = "1.0.82"
vcfire = { git = "https://github.com/Cydhra/vcfire", rev = "3db5fb7" } # probably should be optional because of native dependency

[profile.release]
debug = true
