[package]
name = "libairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
twox-hash = "1.6"
serde = { version = "1.0", features = ["derive"] }
flume = "0.11.0"
thread_local = "1.1.8"

[dev-dependencies]
vcfire = { git = "https://github.com/Cydhra/vcfire", rev = "3db5fb7" } # probably should be optional because of native dependency

[profile.release]
debug = true
